tests/js/error/semantics/builtin_string7.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/
var x = new String("12345")

var __result1 = x.toString();
var __expect1 = "12345"

var __result2 = x.valueOf();
var __expect2 = "12345"